--- Auto-Git Commit ---

--- a/index.html
+++ b/index.html
@@ -12,21 +12,57 @@
 <body>
   <header>
 <div class="container">
+
   <div class="card">
     <div class="face face1">
             <div class="content">
-              <img src="img/chest.png">
+              <img src="img/chest.png" alt="">
               <h3>Экскурсии и мастер-классы</h3>
             </div>
     </div>
           <div class="face face2">
           <div class="content">
-            <p>в музее быньговских сундуков помогут погрузиться в мир мастеров прошлых столетий, расскажут о династиях мастеров-сундучников села Быньги и окунут посетителей в мир старинного промысла. На мастер-классах туристы смогут изготовить небольшие сундучки-сувениры разной сложности</p>
+            <p>В музее быньговских сундуков помогут погрузиться в мир мастеров прошлых столетий, расскажут о династиях мастеров-сундучников села Быньги и окунут посетителей в мир старинного промысла. На мастер-классах туристы смогут изготовить небольшие сундучки-сувениры разной сложности</p>
+          <a href="#">Узнать больше</a>
           </div>
           </div>
   </div>
+
+
+<div class="card">
+  <div class="face face1">
+          <div class="content">
+            <img src="img/chest.png" alt="">
+            <h3>Коливинг</h3>
+          </div>
+  </div>
+        <div class="face face2">
+        <div class="content">
+          <p>Возможность для творческих людей пожить в сообществе единомышленников в старинном селе Быньги, самом сердце уральской глубинки.</p>
+        <a href="#">Узнать больше</a>
+        </div>
+        </div>
 </div>
 
+<div class="card">
+  <div class="face face1">
+          <div class="content">
+            <img src="img/chest.png" alt="">
+            <h3>Коворкинг</h3>
+          </div>
+  </div>
+        <div class="face face2">
+        <div class="content">
+          <p>Позволит мастерам и ремесленникам получить комфортное помещение для мастерских и творческую среду.</p>
+        <a href="#">Узнать больше</a>
+        </div>
+        </div>
+</div>
+
+</div>
+
+  </header>
+<section>
     <div>
       <p class="fotogallery">Фотогалерея</p>
     </div>
@@ -115,7 +151,7 @@
 
     </div>
 </div>
-  </header>
+</section>
   <footer>
     <div class="waves">
       <div class="wave" id="wave1"></div>
