--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
      <li><a href="#">Коливинг</a></li>
      <li><a href="#">Коворкинг</a></li>
  </ul>
- <div class="footer__image"><img src="img/chest.png" alt="Chest"></div>
+ <div class="footer__image"><img class="footer__image" src="img/logo.png" alt="logo"></div>
  <p>&copy;&nbsp;2022 Sunduki.Быньги</p>
 </footer>
 
