--- a/index.html
+++ b/index.html
@@ -19,8 +19,11 @@
     <label for="#"><img class="logo" src="img/logoremove.png" alt=""></label>
     <ul id="mainmenu">
       <li><a  class="active" href="#">О проекте</a></li>
+      <li><a href="">Услуги</a></li>
       <li><a href="">Новости</a></li>
+      <li><a href="">Фото</a></li>   
       <li><a href="">Афиша</a></li>
+      <li><a href="">Партнёры</a></li>
       <li><a href="">На связи</a></li>
     </ul>
   </nav>
